# pros-interface

./: .gitignore  pyproject.toml
pros_interface/: apps.py
pros_interface/interface/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
pros_interface/interface/src/: App.tsx
pros_interface/interface/src/pageComponents/: LoginBox.tsx  MenuBar.tsx  TopBar.tsx
pros_interface/management/commands/: build_interface_config.py  interface_install_node_packages.py  interface_npm.py
pros_interface/management/utils/: build_interface_config.py
tests/: conftest.py  test.py  test_frontend.py  test_setup_app.py
tests/django_app_for_tests/: pros_core  pros_interface
tests/django_app_for_tests/django_app/: django_initializer.py  settings.py
tests/django_app_for_tests/non_pros_app/: apps.py
